# stock_ai_agent

./: .env.example  README.md  earning_call_summary.py  main.py  pyproject.toml  run.sh  run_earning_call_summary.sh  send_report.py
stock_agent_python/: constants.py  earning_call_transcript.py  earning_dates.py  get_stock_price.py  make_stock_report.py  read_google_sheet.py  send_earning_call_summary_report.py  send_email.py  send_stock_report_email.py
